--- a/bravo-front/package.json
+++ b/bravo-front/package.json
@@ -25,5 +25,9 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
 		"vite": "^6.0.11"
+	},
+	"dependencies": {
+		"cors": "^2.8.5",
+		"jwt-decode": "^4.0.0"
 	}
 }
